--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,9 @@
       }
     ],
     "paths": {
-      "src/*": ["./src/*"]
+      "@/*": [
+        "./src/*"
+      ]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
