--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "pdf-parse": "^1.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.43.9",
     "react-query": "^3.39.3",
     "replicate": "^0.12.0",
     "typescript": "5.0.4"
